@@ -1,3 +1,7 @@
+2010-07-30  Evan Briones  <erbriones@gmail.com>
+
+	* MonoDevelop.ClassDesigner.Dialogs: 
+
 2010-07-29  Evan Briones  <erbriones@gmail.com>
 
 	* MonoDevelop.ClassDesigner.Gui.Dialogs: Added to svn.
